добавила задачу 2 (реализована очередь с помощью LinkedList методами enqueue(), dequeue(), first()